--- a/apps/tracker/src/i18n/zh-CN/tracker.json
+++ b/apps/tracker/src/i18n/zh-CN/tracker.json
@@ -1,11 +1,10 @@
 {
-  "MISS_FIELD": "请求参数缺失 BEP3 字段",
-  "INVALID_INFO_HASH": "无效的种子哈希",
-  "INVALID_PEER_ID": "无效的 peer_id",
+  "MISS_FIELD": "缺失BEP3规范必需的{0}字段",
+  "INVALID_FIELD_LENGTH": "无效的{0}字段，它的长度必须为20",
+  "INVALID_FIELD_NUMBER": "{0} 字段必须为数字且不小于0",
+  "INVALID_EVENT": "不支持的事件类型 {0}",
   "INVALID_IP": "无效的 IP 地址",
   "INVALID_PORT": "客户端端口({port})非法，必须为数字且在1-65535中",
   "BLACKLIST_PORT": "客户端端口({port})在黑名单中，请查看站点说明",
-  "INVALID_UPLOAD": "上传必须为数字且大于等于0",
-  "INVALID_DOWNLOAD": "下载必须为数字且大于等于0",
   "INVALID_PASSKEY": "无效的令牌，请尝试重新下载种子"
 }
